# docker-learn-system

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  MEMORY.md  Makefile  OVERVIEW.md  README.md  README.zh.md  ROADMAP.md  demo.sh  learn.py  pyproject.toml  run_webui.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: coach.md  orchestrator.md  quizmaster.md  scribe.md  tutor.md
books/docker-shenjiu/: book.json
books/docker-shenjiu/chapters/: 01-architecture-overview.md  02-container-creation.md  03-container-runtime.md
books/docker-shenjiu/notes/: default_progress.json
deploy/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
deploy/config/: agent.yaml
deploy/init/: seed.cypher
docker-knowledge/: CONCEPTS.md  structure.json
docker-knowledge/basic/: containers.md
docker-knowledge/design/: decisions.md
docker-knowledge/practice/: tips.md
docker-knowledge/source/: architecture.md
engine/: dashboard_engine.py  go_ast_parser.py  knowledge_base.py  knowledge_graph.py  mastery_engine.py  memory_engine.py  orchestrator.py  persona_engine.py  quiz_engine.py  research_engine.py  visualization_engine.py
memory/: 2026-07-23.md
notes/: default.jsonl
personas/: ALL_PERSONAS.md
questions/: EXAMPLES.md
questions/history/: default_2026-07-23.jsonl
web_ui/: app.py  requirements.txt  start.sh
